Added Markdown render keys

--- a/files/atom_cheatsheet/atom_cheatsheet.tex
+++ b/files/atom_cheatsheet/atom_cheatsheet.tex
@@ -139,6 +139,7 @@
 \keys{Ctrl + k} then \keys{Ctrl + right} / \keys{left}     & Focus pane right/left \\ \hline
 \keys{Ctrl + k} then \keys{Ctrl + up} / \keys{down}        & Focus pane up/down \\ \hline
 \keys{Ctrl + $\backslash$}                                 & Toggles file tree view\\ \hline
+\keys{Ctrl+Shift+\textbf{m}}                               & Show rendered \textbf{m}arkdown \\ \hline
 \end{tabular}
 
 \vspace{5mm}
