"Reopen closed tab" added

--- a/files/atom_cheatsheet/atom_cheatsheet.tex
+++ b/files/atom_cheatsheet/atom_cheatsheet.tex
@@ -59,8 +59,9 @@
 \keys{Ctrl + \textbf{n}}                                   & \textbf{N}ew file \\ \hline
 \keys{Ctrl + \textbf{s}}                                   & \textbf{S}ave file \\ \hline
 \keys{Ctrl + Shift + \textbf{s}}                           & \textbf{S}ave as \\ \hline
-\keys{Ctrl + w}                                            & Close file \\ \hline
-\keys{Alt + Shift + o}                                     & Add project folder\\ \hline
+\keys{Ctrl + w}                                            & Close tab \\ \hline
+\keys{Ctrl + Shift + t}                                    & Reopen closed \textbf{t}ab \\ \hline
+\keys{Alt + Shift + o}                                     & Add project folder \\ \hline
 
 \keys{Ctrl + \textbf{b}}                                   & \textbf{B}rowse tabs \\ \hline
 \keys{Ctrl + PgDown} / \keys{PgUp}                         & Switch next/previous tab \\ \hline
