Move tab shortcut added

--- a/files/atom_cheatsheet/atom_cheatsheet.tex
+++ b/files/atom_cheatsheet/atom_cheatsheet.tex
@@ -66,6 +66,7 @@
 \keys{Ctrl + \textbf{b}}                                   & \textbf{B}rowse tabs \\ \hline
 \keys{Ctrl + PgDown} / \keys{PgUp}                         & Switch next/previous tab \\ \hline
 \keys{Alt + 1,2,3\dots}                                    & Switch to 1,2,3\dots tab \\ \hline
+\keys{Ctrl + Shift + PgDown} / \keys{PgUp}                 & Move tab right/left \\ \hline
 \end{tabular}
 
 \vspace{5mm}
