Few major changes...

--- a/files/atom_cheatsheet/atom_cheatsheet.tex
+++ b/files/atom_cheatsheet/atom_cheatsheet.tex
@@ -162,7 +162,7 @@
 \begin{tabular}{|>{\rule{0pt}{0.85\normalbaselineskip}}l|l|}
 \hline
 \rowcolor[gray]{.8}
-\multicolumn{2}{|l|}{\bfseries Github Integration}\\ \hline
+\multicolumn{2}{|l|}{\bfseries GitHub Integration}\\ \hline
 \keys{Alt + g} then \keys{\textbf{b}}                     & Open on Github: \textbf{b}lame \\ \hline
 \keys{Alt + g} then \keys{\textbf{c}}                     & Open on Github: \textbf{c}opy-url \\ \hline
 \keys{Alt + g} then \keys{g}                              & Open on Github: repository \\ \hline
@@ -177,7 +177,7 @@
 \begin{tabular}{|>{\rule{0pt}{0.85\normalbaselineskip}}l|l|}
 \hline
 \rowcolor[gray]{.8}
-\multicolumn{2}{|l|}{\bfseries Git Plus}\\ \hline
+\multicolumn{2}{|l|}{\bfseries Git Plus (git--plus)}\\ \hline
 \keys{Ctrl + Shift + h}                                    & Run Git command \\ \hline
 \keys{Ctrl + Shift + \textbf{a}}                           & \textbf{A}dd \\ \hline
 \keys{Ctrl + Shift + x}                                    & Commit \\ \hline
@@ -192,10 +192,22 @@
 \begin{tabular}{|>{\rule{0pt}{0.85\normalbaselineskip}}l|l|}
 \hline
 \rowcolor[gray]{.8}
-\multicolumn{2}{|l|}{\bfseries Project Manager}\\ \hline
-\keys{Alt + Shift + \textbf{p}}                            & List \textbf{p}rojects \\ \hline
-\keys{Ctrl + Shift + \textbf{p}} then \keys{save project}  & Save \textbf{p}roject \\ \hline
-\keys{Ctrl + Shift + \textbf{p}} then \keys{edit projects} & Edit \textbf{p}rojects \\ \hline
+\multicolumn{2}{|l|}{\bfseries Others (plugins)}\\ \hline
+\keys{Alt + Shift + \textbf{p}}                            & List projects (\textbf{p}roject--manager) \\ \hline
+\keys{Alt + \textbf{t}}                                    & git--\textbf{t}ime--machine \\ \hline
+\keys{Ctrl + Alt + o}                                      & git--control \\ \hline
+\keys{Ctrl + Alt + \textbf{h}}                             & git--\textbf{h}istory \\ \hline
+\end{tabular}
+
+\vspace{5mm}
+
+\begin{tabular}{|>{\rule{0pt}{0.85\normalbaselineskip}}l|l|}
+\hline
+\rowcolor[gray]{.8}
+\multicolumn{2}{|>{\rule{0pt}{0.85\normalbaselineskip}}l|}{\bfseries \keys{Ctrl + Shift + p} -- Command palette items}\\ \hline
+\keys{Git Log: Show}                                       & git--log \\ \hline
+\keys{Project Manager: Save Project}                       & project--manager \\ \hline
+\keys{Project Manager: Edit Projects}                      & project--manager \\ \hline
 \end{tabular}
 
 \vspace{5mm}
