Few more plugins added

--- a/files/atom_cheatsheet/atom_cheatsheet.tex
+++ b/files/atom_cheatsheet/atom_cheatsheet.tex
@@ -197,6 +197,8 @@
 \keys{Alt + \textbf{t}}                                    & git--\textbf{t}ime--machine \\ \hline
 \keys{Ctrl + Alt + o}                                      & git--control \\ \hline
 \keys{Ctrl + Alt + \textbf{h}}                             & git--\textbf{h}istory \\ \hline
+\keys{Ctrl + \textbf{b}}                                   & \textbf{b}lame \\ \hline
+\keys{Alt + \textbf{m}} then \keys{d}                      & \textbf{m}erge--conflicts \\ \hline
 \end{tabular}
 
 \vspace{5mm}
