Few more plugins added

--- a/files/atom_cheatsheet/atom_cheatsheet.tex
+++ b/files/atom_cheatsheet/atom_cheatsheet.tex
@@ -177,7 +177,7 @@
 \begin{tabular}{|>{\rule{0pt}{0.85\normalbaselineskip}}l|l|}
 \hline
 \rowcolor[gray]{.8}
-\multicolumn{2}{|l|}{\bfseries Git Plus (git--plus)}\\ \hline
+\multicolumn{2}{|l|}{\bfseries Git Plus (git-plus)}\\ \hline
 \keys{Ctrl + Shift + h}                                    & Run Git command \\ \hline
 \keys{Ctrl + Shift + \textbf{a}}                           & \textbf{A}dd \\ \hline
 \keys{Ctrl + Shift + x}                                    & Commit \\ \hline
@@ -193,12 +193,13 @@
 \hline
 \rowcolor[gray]{.8}
 \multicolumn{2}{|l|}{\bfseries Others (plugins)}\\ \hline
-\keys{Alt + Shift + \textbf{p}}                            & List projects (\textbf{p}roject--manager) \\ \hline
-\keys{Alt + \textbf{t}}                                    & git--\textbf{t}ime--machine \\ \hline
-\keys{Ctrl + Alt + o}                                      & git--control \\ \hline
-\keys{Ctrl + Alt + \textbf{h}}                             & git--\textbf{h}istory \\ \hline
+\keys{Alt + Shift + \textbf{p}}                            & List projects (\textbf{p}roject-manager) \\ \hline
+\keys{Alt + \textbf{t}}                                    & git-\textbf{t}ime-machine \\ \hline
+\keys{Ctrl + Alt + o}                                      & git-control \\ \hline
+\keys{Ctrl + Alt + \textbf{h}}                             & git-\textbf{h}istory \\ \hline
 \keys{Ctrl + \textbf{b}}                                   & \textbf{b}lame \\ \hline
-\keys{Alt + \textbf{m}} then \keys{d}                      & \textbf{m}erge--conflicts \\ \hline
+\keys{Alt + \textbf{m}} then \keys{d}                      & \textbf{m}erge-conflicts \\ \hline
+\keys{Alt + \textbf{g}} then \keys{Up} / \keys{Down}       & \textbf{G}o to previous/next diff (git-diff) \\ \hline
 \end{tabular}
 
 \vspace{5mm}
@@ -207,9 +208,9 @@
 \hline
 \rowcolor[gray]{.8}
 \multicolumn{2}{|>{\rule{0pt}{0.85\normalbaselineskip}}l|}{\bfseries \keys{Ctrl + Shift + p} -- Command palette items}\\ \hline
-\keys{Git Log: Show}                                       & git--log \\ \hline
-\keys{Project Manager: Save Project}                       & project--manager \\ \hline
-\keys{Project Manager: Edit Projects}                      & project--manager \\ \hline
+\keys{Git Log: Show}                                       & git-log \\ \hline
+\keys{Project Manager: Save Project}                       & project-manager \\ \hline
+\keys{Project Manager: Edit Projects}                      & project-manager \\ \hline
 \end{tabular}
 
 \vspace{5mm}
