--- a/files/atom_cheatsheet/atom_cheatsheet.tex
+++ b/files/atom_cheatsheet/atom_cheatsheet.tex
@@ -63,10 +63,11 @@
 \keys{Ctrl + Shift + t}                                    & Reopen closed \textbf{t}ab \\ \hline
 \keys{Alt + Shift + o}                                     & Add project folder \\ \hline
 
-\keys{Ctrl + \textbf{b}}                                   & \textbf{B}rowse tabs \\ \hline
+\keys{Ctrl + Shift + \textbf{b}}                           & \textbf{B}rowse tabs \\ \hline
 \keys{Ctrl + PgDown} / \keys{PgUp}                         & Switch next/previous tab \\ \hline
 \keys{Alt + 1,2,3\dots}                                    & Switch to 1,2,3\dots tab \\ \hline
 \keys{Ctrl + Shift + PgDown} / \keys{PgUp}                 & Move tab right/left \\ \hline
+\keys{Ctrl + Shift} + \keys{Tab}                           & Switch between MRU tabs \\ \hline
 \end{tabular}
 
 \vspace{5mm}
