Character Transformations table added

--- a/files/atom_cheatsheet/atom_cheatsheet.tex
+++ b/files/atom_cheatsheet/atom_cheatsheet.tex
@@ -75,7 +75,7 @@
 \begin{tabular}{|>{\rule{0pt}{0.85\normalbaselineskip}}l|l|}
 \hline
 \rowcolor[gray]{.8}
-\multicolumn{2}{|l|}{\bfseries Editing Lines}\\ \hline
+\multicolumn{2}{|l|}{\bfseries Editing}\\ \hline
 \keys{Ctlr + left} / \keys{right}                          & Move backward/forward one word \\ \hline
 \keys{Ctrl + Shift + left} / \keys{right}                  & Select backward/forward one word \\ \hline
 \keys{Ctrl + Backspace} / \keys{Del}                       & Delete to the beginning/end of word \\ \hline
@@ -115,6 +115,17 @@
 \keys{F2}                                                  & Goto next bookmark \\ \hline
 \keys{Shift + F2}                                          & Goto previous bookmark \\ \hline
 \end{tabular}
+
+\vspace{5mm}
+
+\begin{tabular}{|>{\rule{0pt}{0.85\normalbaselineskip}}l|l|}
+\hline
+\rowcolor[gray]{.8}
+\multicolumn{2}{|l|}{\bfseries Character Transformations}\\ \hline
+\keys{Ctlr + k + \textbf{u}}                               & Convert to \textbf{U}pper Case \\ \hline
+\keys{Ctlr + k + \textbf{l}}                               & Convert to \textbf{L}ower Case \\ \hline
+\end{tabular}
+
 
 \vspace{5mm}
 
